Minor changes, a couple variable names

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             const lat = position.coords.latitude;
             const lon = position.coords.longitude;
             const timeStamp = Date.now();
-            const mood = document.getElementById("word").value;
+            const word = document.getElementById("word").value;
             
             document.getElementById("latitude").textContent = lat;
             document.getElementById("longitude").textContent = lon;
