--- a/public/all.html
+++ b/public/all.html
@@ -25,17 +25,17 @@
         const response = await fetch('/all');
         const data = await response.json();
         for(item of data) {
-          const root = document.createElement('div');
-          const mood = document.createElement('div');
+          const root = document.createElement('p');
+          const word = document.createElement('div');
           const geo = document.createElement('div');
           const date = document.createElement('div');
 
-          mood.textContent = item.mood;
+          word.textContent = item.word;
           geo.textContent = item.lat + " " + item.lon;
           const dateString = new Date(item.timeStamp).toLocaleString();
           date.textContent = dateString;
 
-          root.append(mood, geo, date);
+          root.append(word, geo, date);
           document.body.append(root);
         }
       }
