--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Latitude: <span id="latitude"></span><br/>
       Longitude: <span id="longitude"></span>
     </p>
-    <label for="Word">Enter your mood</label>
+    <label for="Word">Enter a word</label>
     <input id="word" value="">
     <button onclick="getPostLocation()">Submit</button>  
 
