--- a/public/all.html
+++ b/public/all.html
@@ -12,6 +12,7 @@
     <title>Geolocation</title>
   </head>
   <body>
+    <h1>Geolocation</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
