--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <title>Geolocation</title>
   </head>
   <body>
+    <h1>Geolocation</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
